--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Quotes Generator</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="styles.css">		
-	<link rel="SHORTCUT ICON" href="logo.png" type="img/x-icon">
+	<link rel="SHORTCUT ICON" href="img/logo.png" type="img/x-icon">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 		 	 <button class="button button4" onClick="fetchQuote()">Get a New Quote</button>
 			  <a ref="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="I would like to share this perfect quote with you!" data-hashtags="quotesgenerator" data-lang="en" data-show-count="false">Tweet</a>
 			  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	<script src="index.js"></script>
+	<script src="dist/index.js"></script>
 
 </body>
 
